my-app/static/generalstyle.scss
@font-face {
	font-family: 'Waltograph';
	src: url('/fonts/Waltograph/waltographUI.ttf') format('truetype');
}

@font-face {
	font-family: 'Roboto';
	src: url('/fonts/Roboto/Roboto-Regular.ttf') format('truetype');
}

:root {
	--primary-color: #192655;
	--secundary-color: #f3f0ca;
	--accent-color: #e1aa74;
	--primary-color-light: #3876bf;

	--standard-transition-time: 0.25s;
}

body {
	background: var(--primary-color);
    overflow-y: hidden;
}

* {
	margin: 0;
	padding: 0;
	font-family: Roboto, Verdana, Geneva, Tahoma, sans-serif;
}

h1,
h2,
h3 {
	font-family: 'Waltograph', Verdana, Geneva, Tahoma, sans-serif;
}

h1 {
    font-size:2rem;
    color:var(--secundary-color);
    margin: 2rem auto 0;
    width: 65%;
    text-align: center;
}

p {
    color:var(--secundary-color);
    width: 50%;
    max-width: 35rem;
    margin: 2rem auto;
    text-align: center;
}

fieldset> legend, form > label {
	font-size: 1.1rem;
    color: var(--primary-color);
}

input {
    color: var(--primary-color-light)
}

